# Risk_management

./: LICENSE  package-lock.json  package.json  tailwind.config.ts
server/project_guardian_ai/: .env.example  pyproject.toml
server/project_guardian_ai/src/project_guardian_ai/: __init__.py  api.py  crew.py  main.py
server/project_guardian_ai/src/project_guardian_ai/config/: agents.yaml  tasks.yaml
src/: App.tsx  index.css
src/components/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx  ChatPanel.tsx  ProfilePanel.tsx
src/context/: AuthContext.tsx
src/data/: mockData.ts
src/lib/: api.ts
src/pages/: AgentMonitoring.tsx  Dashboard.tsx  Landing.tsx  Login.tsx  ProjectDetail.tsx  ProjectsList.tsx  Register.tsx  RiskReports.tsx
src/types/: risk.ts
